# system_securite

./: Code12.txt  README.md  code_working  i2c_examen_fini.c
Adam_Avancement WEB/: index.html  script.js
Adam_Avancement WEB/Versions/: HTML1.html  Java1.1.js
Blink_Led_ESP32/: Blink_Led_ESP32.ino
Schem scam/: BUTTONS_MX_SWITCHES.kicad_sch  ESP32.kicad_sch  LED_WS2812B.kicad_sch  Schem scam.kicad_prl  Schem scam.kicad_pro  Schem scam.kicad_sch  ~Schem scam.kicad_sch.lck
spi_master_slave_TONY/spi_master/: CMakeLists.txt  TONY_spi_master.c
spi_master_slave_TONY/spi_slave/: CMakeLists.txt  TONY_spi_slave.c
